--- a/graduation-project-website-by-donam/Makefile
+++ b/graduation-project-website-by-donam/Makefile
@@ -1,23 +1,27 @@
-.PHONY: build-dev
-build-dev: ## Build the development docker image.
-	docker compose -f docker/development/docker-compose.yml build next-web
+.PHONY: start-db
+start-db: ## Start the database docker container.
+	docker compose -f docker-compose.yml up -d db
 
-.PHONY: start-dev
-start-dev: ## Start the development docker container.
-	docker compose -f docker/development/docker-compose.yml up -d --build
+.PHONY: start-nextjs
+start-nextjs: ## Start the server docker container.
+	docker compose -f docker-compose.yml up -d --build nextjs_c
 
-.PHONY: stop-dev
-stop-dev: ## Stop the development docker container.
-	docker compose -f docker/development/docker-compose.yml down
+.PHONY: sync-db
+sync-db: ## sync the database with prisma migrate.
+	docker exec -it nextjs_c npx prisma migrate dev --name init
+
+.PHONY: pg-login
+pg-login: ## Login to local postgres.
+	docker exec -it db psql -U postgres
   
 .PHONY: build-prod
 build-prod: ## Build the production docker image.
-	docker compose -f docker/production/docker-compose.yml build
+	docker compose -f docker-compose.yml build
 
 .PHONY: start-prod
 start-prod: ## Start the production docker container.
-	docker compose -f docker/production/docker-compose.yml up -d
+	docker compose -f docker-compose.yml up -d
 
 .PHONY: stop-prod
 stop-prod: ## Stop the production docker container.
-	docker compose -f docker/production/docker-compose.yml down
+	docker compose -f docker-compose.yml down
