--- a/graduation-project-website-by-donam/Makefile
+++ b/graduation-project-website-by-donam/Makefile
@@ -1,10 +1,10 @@
 .PHONY: start-db
 start-db: ## Start the database docker container.
 	docker compose -f docker-compose.yml up -d db
-
+	
 .PHONY: start-nextjs
 start-nextjs: ## Start the server docker container.
-	docker compose -f docker-compose.yml up -d --build nextjs_c
+	docker compose -f docker-compose.yml up -d nextjs_c
 
 .PHONY: sync-db
 sync-db: ## sync the database with prisma migrate.
