--- a/graduation-project-website-by-donam/Dockerfile
+++ b/graduation-project-website-by-donam/Dockerfile
@@ -52,9 +52,14 @@ RUN chown nextjs:nodejs .next
 COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/.next/static ./.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/prisma ./prisma
-COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/node_modules ./node_modules
+COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/node_modules/@prisma/client ./node_modules/@prisma/client
+COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/node_modules/.prisma/client ./node_modules/.prisma/client
 COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/next.config.mjs ./next.config.mjs
-COPY --from=builder --chown=nextjs:nodejs /app/graduation-project-website-by-donam/.env ./env
+
+USER root
+COPY start.sh /start.sh
+COPY .dockerignore /.dockerignore
+RUN chmod +x /start.sh
 
 USER nextjs
 
@@ -64,4 +69,5 @@ ENV PORT 3000
 
 # server.js is created by next build from the standalone output
 # https://nextjs.org/docs/pages/api-reference/next-config-js/output
-CMD HOSTNAME="0.0.0.0" node server.js
+
+ENTRYPOINT "/start.sh"
