--- a/graduation-project-website-by-donam/Dockerfile
+++ b/graduation-project-website-by-donam/Dockerfile
@@ -10,6 +10,23 @@ RUN git clone https://github.com/DoNhatNam1/graduation-project-website-by-donam.
 
 WORKDIR /app/graduation-project-website-by-donam
 
+ARG DOCKER_POSTGRES_PRISMA_URL
+ARG NEXT_PUBLIC_FIREBASE_API_KEY
+ARG NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+ARG NEXT_PUBLIC_FIREBASE_PROJECT_ID
+ARG NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+ARG NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+ARG NEXT_PUBLIC_FIREBASE_APP_ID
+ARG NEXT_PUBLIC_FIREBASE_MESUREMENT_ID
+ARG NEXT_PUBLIC_HOSTNAME_PATH
+ARG COOKIES_SESSION_NAME
+ARG COOKIES_DATA_NAME
+ARG SECRET_KEY
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+ARG NEXT_AUTH_SECRET
+ARG KEY_REGISTER_EMAIL
+
 # Install dependencies based on the preferred package manager
 RUN \
   if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
@@ -23,6 +40,24 @@ RUN \
 # Uncomment the following line in case you want to disable telemetry during the build.
 # ENV NEXT_TELEMETRY_DISABLED 1
 
+ENV NODE_ENV production
+ENV DOCKER_POSTGRES_PRISMA_URL $DOCKER_POSTGRES_PRISMA_URL
+ENV NEXT_PUBLIC_FIREBASE_API_KEY $NEXT_PUBLIC_FIREBASE_API_KEY
+ENV NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN $NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+ENV NEXT_PUBLIC_FIREBASE_PROJECT_ID $NEXT_PUBLIC_FIREBASE_PROJECT_ID
+ENV NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET $NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+ENV NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID $NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+ENV NEXT_PUBLIC_FIREBASE_APP_ID $NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+ENV NEXT_PUBLIC_FIREBASE_MESUREMENT_ID $NEXT_PUBLIC_FIREBASE_MESUREMENT_ID
+ENV NEXT_PUBLIC_HOSTNAME_PATH $NEXT_PUBLIC_HOSTNAME_PATH
+ENV COOKIES_SESSION_NAME $COOKIES_SESSION_NAME
+ENV COOKIES_DATA_NAME $COOKIES_DATA_NAME
+ENV SECRET_KEY $SECRET_KEY
+ENV GOOGLE_CLIENT_ID $GOOGLE_CLIENT_ID
+ENV GOOGLE_CLIENT_SECRET $GOOGLE_CLIENT_SECRET
+ENV NEXT_AUTH_SECRET $NEXT_AUTH_SECRET
+ENV KEY_REGISTER_EMAIL $KEY_REGISTER_EMAIL
+
 RUN \
   if [ -f yarn.lock ]; then yarn run build; \
   elif [ -f package-lock.json ]; then npm run build; \
@@ -34,7 +69,40 @@ RUN \
 FROM base AS runner
 WORKDIR /app/graduation-project-website-by-donam
 
+ARG DOCKER_POSTGRES_PRISMA_URL
+ARG NEXT_PUBLIC_FIREBASE_API_KEY
+ARG NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+ARG NEXT_PUBLIC_FIREBASE_PROJECT_ID
+ARG NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+ARG NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+ARG NEXT_PUBLIC_FIREBASE_APP_ID
+ARG NEXT_PUBLIC_FIREBASE_MESUREMENT_ID
+ARG NEXT_PUBLIC_HOSTNAME_PATH
+ARG COOKIES_SESSION_NAME
+ARG COOKIES_DATA_NAME
+ARG SECRET_KEY
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+ARG NEXT_AUTH_SECRET
+ARG KEY_REGISTER_EMAIL
+
 ENV NODE_ENV production
+ENV DOCKER_POSTGRES_PRISMA_URL $DOCKER_POSTGRES_PRISMA_URL
+ENV NEXT_PUBLIC_FIREBASE_API_KEY $NEXT_PUBLIC_FIREBASE_API_KEY
+ENV NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN $NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+ENV NEXT_PUBLIC_FIREBASE_PROJECT_ID $NEXT_PUBLIC_FIREBASE_PROJECT_ID
+ENV NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET $NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+ENV NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID $NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+ENV NEXT_PUBLIC_FIREBASE_APP_ID $NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+ENV NEXT_PUBLIC_FIREBASE_MESUREMENT_ID $NEXT_PUBLIC_FIREBASE_MESUREMENT_ID
+ENV NEXT_PUBLIC_HOSTNAME_PATH $NEXT_PUBLIC_HOSTNAME_PATH
+ENV COOKIES_SESSION_NAME $COOKIES_SESSION_NAME
+ENV COOKIES_DATA_NAME $COOKIES_DATA_NAME
+ENV SECRET_KEY $SECRET_KEY
+ENV GOOGLE_CLIENT_ID $GOOGLE_CLIENT_ID
+ENV GOOGLE_CLIENT_SECRET $GOOGLE_CLIENT_SECRET
+ENV NEXT_AUTH_SECRET $NEXT_AUTH_SECRET
+ENV KEY_REGISTER_EMAIL $KEY_REGISTER_EMAIL
 # Uncomment the following line in case you want to disable telemetry during runtime.
 # ENV NEXT_TELEMETRY_DISABLED 1
 
